--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
             <button class="talk" aria-label="Click to speak"><i class="fas fa-microphone-alt"></i></button>
             <h1 class="content">Click here to speak</h1>
         </div>
+        <div id="search-results-container">
+            <!-- Search results will be dynamically added here -->
+        </div>
+    </section>
+
+    <!-- Search Results Section -->
+    <section class="search-results" id="search-results">
+        <div class="results-container">
+            <h2>Search Results</h2>
+            <div id="results-content">
+                <!-- Search results will be dynamically added here -->
+            </div>
+            <button id="copy-button">Copy Results</button>
+        </div>
     </section>
 
     <script src="app.js"></script>
